feat (global): add ru/en & text content & links

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,12 +1,12 @@
 {
-  "full_name": "Anastasia Belkina",
+  "page_title": "Belkina UX/UI Designer",
   "greeting": "Hello",
   "introduction": "I'm Anastasia",
   "description": "Love creating clear, efficient and convenient interfaces",
   "position": "Senior Designer at",
-  "portfolio": "To see my work - visit",
+  "portfolio": "To see my work - visit my",
   "about": "To get to know me better - see my",
-  "resume": "Resume",
-  "mail": "Get in touch via",
+  "resume": "resume",
+  "contact": "Get in touch via",
   "tele": "or telegram"
 }
