--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1,5 +1,5 @@
 {
-  "full_name": "Анастасия Белкина",
+  "page_title": "Белкина UX/UI Designer",
   "greeting": "Привет",
   "introduction": "Меня зовут Анастасия",
   "description": "Я создаю чистые, понятные и удобные интерфейсы",
@@ -7,6 +7,6 @@
   "portfolio": "С портфолио можно ознакомиться на",
   "about": "С образованием и опытом работы - в",
   "resume": "резюме",
-  "mail": "Связаться со мной можно, написав на почту",
+  "contact": "Связаться со мной можно, написав на почту",
   "tele": "или в telegram"
 }
