feat (global): add layout

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,8 +2,9 @@
   "page_title": "Belkina UX/UI Designer",
   "greeting": "Hello",
   "introduction": "I'm Anastasia",
-  "description": "Love creating clear, efficient and convenient interfaces",
-  "position": "Senior Designer at",
+  "description": "I love creating clear, efficient and convenient",
+  "interfaces": "interfaces",
+  "position": "UX/UI Designer at",
   "portfolio": "To see my work - visit my",
   "about": "To get to know me better - see my",
   "resume": "resume",
