--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -2,10 +2,11 @@
   "page_title": "Белкина UX/UI Designer",
   "greeting": "Привет",
   "introduction": "Меня зовут Анастасия",
-  "description": "Я создаю чистые, понятные и удобные интерфейсы",
+  "description": "Я создаю чистые, понятные и удобные",
+  "interfaces": "интерфейсы",
   "position": "UX/UI Designer в",
   "portfolio": "С портфолио можно ознакомиться на",
-  "about": "С образованием и опытом работы - в",
+  "about": "Образование и опыт работы -",
   "resume": "резюме",
   "contact": "Связаться со мной можно, написав на почту",
   "tele": "или в telegram"
