feat(components): add Footer

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -4,9 +4,9 @@
   "introduction": "Меня зовут Анастасия",
   "description": "Я создаю чистые, понятные и удобные",
   "interfaces": "интерфейсы",
-  "position": "UX/UI Designer в",
+  "position": "UX/UI Дизайнер в",
   "portfolio": "С портфолио можно ознакомиться на",
-  "about": "Образование и опыт работы -",
+  "about": "С образованием и опытом работы - в",
   "resume": "резюме",
   "contact": "Связаться со мной можно, написав на почту",
   "tele": "или в telegram"
